tests/typechecker/should_pass/productions_unsafe.csp
Z = let productions(x) = x within productions({})
