tests/typechecker/should_fail/extensions_empty_dot_list.csp
channel z

Z = extensions(z)
